vlib/v/checker/tests/map_init_wrong_type.out
vlib/v/checker/tests/map_init_wrong_type.vv:3:18: error: invalid map value: expected `f32`, not `float literal`
    1 | fn main() {
    2 |    mut a := map[string]f32{}
    3 |    a = map{ 'x': 12.3 }
      |                  ~~~~
    4 |    _ = map{2:0 3:0 "hi":0}
    5 |    _ = map{2:0 3:`@` 4:0}
vlib/v/checker/tests/map_init_wrong_type.vv:4:20: error: invalid map key: expected `int`, not `string`
    2 |    mut a := map[string]f32{}
    3 |    a = map{ 'x': 12.3 }
    4 |    _ = map{2:0 3:0 "hi":0}
      |                    ~~~~
    5 |    _ = map{2:0 3:`@` 4:0}
    6 |   _ = a
vlib/v/checker/tests/map_init_wrong_type.vv:5:18: error: invalid map value: expected `int`, not `rune`
    3 |    a = map{ 'x': 12.3 }
    4 |    _ = map{2:0 3:0 "hi":0}
    5 |    _ = map{2:0 3:`@` 4:0}
      |                  ~~~
    6 |   _ = a
    7 | }